# paw

./: .woodpecker.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  INSTALL.md  README.md  char32.c  char32.h  client-protocol.h  client.c  config.c  csi.c  dcs.c  generate-version.sh  grid.c  ime.c  ime.h  input.c  key-binding.c  main.c  meson.build  meson_options.txt  notify.c  notify.h  paw-features.c  paw-server.desktop  paw-server.service.in  paw-server.socket  paw.desktop  paw.info  paw.ini  pawclient.desktop  pyproject.toml  render.c  server.c  shm.c  slave.c  terminal.c  terminal.h  vt.c  wayland.c  (+1 more)
.builds/: alpine-x64.yml.disabled  alpine-x86.yml.disabled  freebsd-x64.yml
.forgejo/issue_template/: bug.yml  config.yml  feature_request.yml
completions/: meson.build
completions/bash/: paw  pawclient
completions/fish/: paw.fish  pawclient.fish
completions/zsh/: _paw  _pawclient
doc/: benchmark.md  meson.build  paw-ctlseqs.7.scd  paw.1.scd  paw.ini.5.scd  pawclient.1.scd
pgo/: full-inner.sh  partial.sh  pgo.c  pgo.sh
scripts/: generate-alt-random-writes.py  generate-emoji-variation-sequences.py
tests/: test-config.c
themes/: dracula  iterm  nord  onehalf-dark
