zsh_install_dir = join_paths(get_option('datadir'), 'zsh', 'site-functions')
fish_install_dir = join_paths(get_option('datadir'), 'fish', 'vendor_completions.d')
bash_install_dir = join_paths(get_option('datadir'), 'bash-completion', 'completions')
install_data('zsh/_paw', install_dir: zsh_install_dir)
install_data('zsh/_pawclient', install_dir: zsh_install_dir)
install_data('fish/paw.fish', install_dir: fish_install_dir)
install_data('fish/pawclient.fish', install_dir: fish_install_dir)
install_data('bash/paw', install_dir: bash_install_dir)
install_data('bash/pawclient', install_dir: bash_install_dir)
